--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,27 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="">
+	<meta name="author" content="">
+	<link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+	<link href="assets/css/style.css" rel="stylesheet">
+	<link href="assets/color/default.css" rel="stylesheet">
+	<link rel="shortcut icon" href="assets/img/favicon.ico">
 </head>
 <body>
   <app-root></app-root>
+  <a href="#" class="scrollup"><i class="icon-angle-up icon-square icon-bgdark icon-2x"></i></a>
+	<script src="assets/js/jquery.js"></script>
+	<script src="assets/js/jquery.scrollTo.js"></script>
+	<script src="assets/js/jquery.nav.js"></script>
+	<script src="assets/js/jquery.localScroll.js"></script>
+	<script src="assets/js/bootstrap.js"></script>
+	<script src="assets/js/jquery.prettyPhoto.js"></script>
+	<script src="assets/js/isotope.js"></script>
+	<script src="assets/js/jquery.flexslider.js"></script>
+	<script src="assets/js/inview.js"></script>
+	<script src="assets/js/animate.js"></script>
+	<script src="assets/js/custom.js"></script>
+	<script src="assets/contactform/contactform.js"></script>
 </body>
 </html>
